Fixed table and signin

--- a/angular.json
+++ b/angular.json
@@ -54,6 +54,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -102,5 +103,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "e6dcd367-6ab8-4fd8-8106-cf83e182cfce"
   }
 }
