--- a/angular.json
+++ b/angular.json
@@ -85,6 +85,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "proxyConfig": "src/proxyconfig.json"
+          },
           "configurations": {
             "production": {
               "buildTarget": "students-app:build:production"
